@@ -1,2 +1,2 @@
 # -*- coding: utf-8 -*-
-__version__ = '0.4.3'
+__version__ = '0.4.4'
